force-app/main/default/objects/Compensation__c/Compensation__c.object-meta.xml
<CustomObject>
    <label>Compensation</label>
    <nameField>
        <displayFormat>CMP{0000000}</displayFormat>
        <label>Comp Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compensations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>