force-app/main/default/objects/Compensation__c/fields/Compensation_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compensation Submitted</label>
    <type>Checkbox</type>
</CustomField>