force-app/main/default/objects/Compensation__c/fields/Finalized_Hike__c.field-meta.xml
<CustomField>
    <fullName>Finalized_Hike__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Finalized Hike %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>