force-app/main/default/objects/Compensation__c/fields/HR_Rating__c.field-meta.xml
<CustomField>
    <fullName>HR_Rating__c</fullName>
    <label>HR Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>