force-app/main/default/objects/Compensation__c/fields/Next_Appraisal_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Appraisal_Date__c</fullName>
    <label>Next Appraisal Date</label>
    <type>Date</type>
</CustomField>