force-app/main/default/objects/Compensation__c/fields/Overall_KRA_Average_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_KRA_Average_Rating__c</fullName>
    <description>This field is storing all KRA Overall Average Rating</description>
    <label>Overall KRA Average Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>