force-app/main/default/objects/Compensation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Reviewed_By__c</columns>
    <columns>Finalized_Hike__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>